compiler/tests/en/errors/pure_impure_call.salam
// EXPECT: E012
func log_it(x : int) : int:
    println(x)
    ret x
end

pure func twice(x : int) : int:
    ret log_it(x) * 2
end

func main:
    println(twice(3))
end
